--- a/src/test/Resources/conf.properties
+++ b/src/test/Resources/conf.properties
@@ -1,3 +1,4 @@
 site = https://www.amazon.com/
 chromedriver = D:\\Maryna Petrenko\\Java\\Amazon\\Amazon_Task\\chromedriver.exe
 search = Java
+compareBookPage = https://www.amazon.com/Learning-Java-Introduction-Real-World-Programming/dp/1492056278/ref=sr_1_7?keywords=java&qid=1663145026&s=books&sr=1-7
